fix(afcrc-helper): prevent overflow in template editor

--- a/styles/afcrc-helper.css
+++ b/styles/afcrc-helper.css
@@ -100,6 +100,11 @@ body.afcrc-helper-open #mw-teleport-target {
     & details {
         margin-block: 5px;
         background-color: #e2e2e2;
+
+        /* stylelint-disable-next-line selector-class-pattern */
+        & .oo-ui-fieldLayout-header {
+            max-width: 100% !important;
+        }
     }
 }
 
